# it-helpdesk-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  agent.py  grounding.py  logging_config.py  main.py  models.py  prompt.py  pyproject.toml  rate_limit.py  runner.py  serve.py  tools.py
eval/: live_progress.py  metrics.py  report.py  run_eval.py
policies/: policies.yaml  policy_retrieval.py  yaml_policy_retriever.py
scripts/: dev-teardown.sh  dev.sh  jira_eval_tickets.py  loom-dry-run.sh  run-demo.sh  summarize_live_eval.py
tests/: conftest.py  test_grounding.py  test_jira_eval_tickets.py  test_live_progress.py  test_llm_usage.py  test_logging_config.py  test_metrics.py  test_rate_limit.py  test_report.py  test_runner.py  test_serve.py  test_summarize_live_eval.py  test_tools.py
tests/fixtures/: eval_tickets.py  sample_tickets.py
tests/integration/: test_process_ticket.py
