[project]
name = "it-helpdesk-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.8",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "ruff>=0.15.16",
    "tiktoken>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: live LLM integration tests (require MODEL and API key)",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 88

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
